fix layout issue in safari article comment page

--- a/Reddah.Web.UI/Content/Site.mobile.css
+++ b/Reddah.Web.UI/Content/Site.mobile.css
@@ -1516,6 +1516,10 @@ div.AssistancePopupHeader
     .changeLocaleBlock {
         width: 80% !important;
     }
+
+    .changeLocaleBlock li {
+        margin-bottom: 68px;
+    }
 }
  .changeLocaleBlock 
 {
